force-app/main/default/objects/OOE_Demo__c/OOE_Demo__c.object-meta.xml
<CustomObject>
    <label>OOE Demo</label>
    <nameField>
        <displayFormat>OOED-{0000}</displayFormat>
        <label>OOE Demo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OOE Demos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>