force-app/main/default/objects/OOE_Demo__c/fields/Before_Save_Flow_Runs__c.field-meta.xml
<CustomField>
    <fullName>Before_Save_Flow_Runs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Before Save Flow Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>