force-app/main/default/objects/OOE_Demo__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>OOE_Demo_Parent__c</referenceTo>
    <relationshipLabel>OOE Demos</relationshipLabel>
    <relationshipName>OOE_Demos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>