force-app/main/default/objects/OOE_Demo__c/fields/Process_Builder_Runs__c.field-meta.xml
<CustomField>
    <fullName>Process_Builder_Runs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Process Builder Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>