force-app/main/default/objects/OOE_Demo__c/fields/Run_Process_Validation__c.field-meta.xml
<CustomField>
    <fullName>Run_Process_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Process Validation</label>
    <type>Checkbox</type>
</CustomField>