force-app/main/default/objects/OOE_Demo__c/fields/Workflow_Rule_Runs__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Rule_Runs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Workflow Rule Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>