force-app/main/default/objects/OOE_Demo__c/validationRules/Count_Cannot_Be_Six.validationRule-meta.xml
<ValidationRule>
    <fullName>Count_Cannot_Be_Six</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Run_Process_Validation__c, Count__c == 6)</errorConditionFormula>
    <errorDisplayField>Count__c</errorDisplayField>
    <errorMessage>The Count cannot be 6.</errorMessage>
</ValidationRule>