force-app/main/default/objects/OOE_Demo__c/validationRules/Count_Cannot_Be_Three.validationRule-meta.xml
<ValidationRule>
    <fullName>Count_Cannot_Be_Three</fullName>
    <active>true</active>
    <errorConditionFormula>Count__c == 3</errorConditionFormula>
    <errorDisplayField>Count__c</errorDisplayField>
    <errorMessage>The Count cannot be 3.</errorMessage>
</ValidationRule>